--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,27 +1,31 @@
 cmake_minimum_required(VERSION 3.16)
 project(cpp-script-editor LANGUAGES CXX)
 
-include(qt.cmake)
-
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_AUTOMOC ON)
 
-find_package(QT NAMES Qt5 REQUIRED COMPONENTS Core)
-find_package(Qt${QT_VERSION_MAJOR}
+add_compile_options(/W4 /WX)
+
+find_package(Qt5
     COMPONENTS
         Core
         Gui
-        Widgets
+        Widgets        
+        Network
 )
-qt_standard_project_setup()
 
 set(PROJECT_SOURCES
     src/main.cpp
+    src/ui.h
+    src/ui.cpp
     src/script_editor.h
     src/script_editor.cpp
+    resources/resources.rc
+    resources/resources.qrc
 )
 
-qt_add_executable(${PROJECT_NAME} ${PROJECT_SOURCES})
+add_executable(${PROJECT_NAME} ${PROJECT_SOURCES})
 
 if(CMAKE_BUILD_TYPE STREQUAL "Release")
 
@@ -36,5 +40,15 @@ target_link_libraries(${PROJECT_NAME}
         Qt::Core
         Qt::Gui
         Qt::Widgets
+        Qt::Network
+)
+
+set(SCRIPTS_DIR "${CMAKE_SOURCE_DIR}/scripts")
+
+add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E make_directory "$<TARGET_FILE_DIR:${PROJECT_NAME}>/scripts"
+    COMMAND ${CMAKE_COMMAND} -E copy_directory
+            "${SCRIPTS_DIR}"
+            "$<TARGET_FILE_DIR:${PROJECT_NAME}>/scripts"
 )
 
